# janus

./: .gitignore  ChangeLog.md  LICENSE  LambdaPi.cabal  README.md  cabal.project  cabal.project.freeze  hie.yaml  janus.cabal  package.yaml  prelude.jns  prelude.lp  stack.yaml
.github/workflows/: build.yaml
app/: Main.hs
lib/: Exponential_elimination.jns  Paramorphisms.jns  Prelude.jns
src/: Interpreter.hs  Parser.hs  Printer.hs  Rig.hs  Scope.hs  Semiring.hs  Types.hs  Typing.hs
src/Janus/: Evaluation.hs  Infer.hs  Interpreter.hs  Judgment.hs  Parser.hs  Parsing.hs  Pretty.hs  Printer.hs  REPL.hs  Semiring.hs  Style.hs  Syntax.hs  Types.hs  Typing.hs
test/: IntegrationSpec.hs  ParseSpec.hs  Spec.hs  TypeSpec.hs
