cabal-version:         2.4

name:                  LambdaPi
version:               0.1.0.0
synopsis:              An interpreter with Quantitative Types and Additive Pairs
description:
  An interpreter with Quantitative Types and Additive Pairs
  with longer description
category:              Language, Compilers/Interpreters
homepage:              https://github.com/svobot/LambdaPi
author:                Tomáš Svoboda
maintainer:            Tomáš Svoboda <svoboda@posteo.net>
license:               BSD-3-Clause
license-file:          LICENSE
copyright:             Copyright (C) 2021 Tomáš Svoboda
build-type:            Simple
extra-source-files:    README.md
                       ChangeLog.md

source-repository head
  type:                git
  location:            https://github.com/svobot/LambdaPi

common common
  default-language:    Haskell2010
  ghc-options:         -Weverything
                       -Wno-all-missed-specialisations
                       -Wno-implicit-prelude
                       -Wno-missing-import-lists
                       -Wno-missing-local-signatures
                       -Wno-monomorphism-restriction
                       -Wno-safe
                       -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options:       -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:       -Wno-missing-safe-haskell-mode
                       -Wno-prepositive-qualified-module
  default-extensions:  LambdaCase
                     , OverloadedStrings
                     , TupleSections
                     , TypeApplications
  build-depends:       base ^>=4.14

common threaded
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

library
  import:              common
  build-depends:       containers
                     , mtl
                     , parsec
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , repline ^>=0.4
                     , text
  exposed-modules:     Interpreter
                     , Parser
                     , Printer
                     , Semiring
                     , Types
                     , Typing
  other-modules:       Paths_LambdaPi
  autogen-modules:     Paths_LambdaPi
  hs-source-dirs:      src

executable LambdaPic
  import:              common, threaded
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       LambdaPi

test-suite test
  import:              common, threaded
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       IntegrationSpec
                     , ParseSpec
                     , TypeSpec
  build-depends:       LambdaPi
                     , hspec
                     , mtl
                     , parsec
  build-tool-depends:  hspec-discover:hspec-discover
  ghc-options:         -Wno-missing-export-lists

