cabal-version:         2.4

name:                  janus
version:               0.1.0.0
synopsis:              An interpreter with Quantitative Types and Additive Pairs
description:
  An interpreter of a simple programming language based on a λ-calculus with
  Quantitative Types. It supports the following types:
  .
  * Dependent funtion types;
  .
  * Dependent multiplicative pairs and multiplicative units;
  .
  * Dependent additive pairs and additive units.
  .

  See the documentation of usage in the @Janus.REPL@ module.
category:              Language, Compilers/Interpreters
homepage:              https://github.com/svobot/janus
author:                Tomáš Svoboda
maintainer:            Tomáš Svoboda <svoboda@posteo.net>
license:               BSD-3-Clause
license-file:          LICENSE
copyright:             Copyright (C) 2021 Tomáš Svoboda
build-type:            Simple
data-files:            lib/Prelude.jns
extra-source-files:    README.md

source-repository head
  type:                git
  location:            https://github.com/svobot/janus

common common
  default-language:    Haskell2010
  ghc-options:         -Weverything
                       -Wno-all-missed-specialisations
                       -Wno-implicit-prelude
                       -Wno-missing-import-lists
                       -Wno-missing-local-signatures
                       -Wno-monomorphism-restriction
                       -Wno-safe
                       -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options:       -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:       -Wno-missing-safe-haskell-mode
                       -Wno-prepositive-qualified-module
  default-extensions:  LambdaCase
                     , OverloadedStrings
                     , TupleSections
                     , TypeApplications
  build-depends:       base ^>=4.14

common threaded
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

library
  import:              common
  build-depends:       containers
                     , mtl
                     , megaparsec
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , repline ^>=0.4
                     , text
  exposed-modules:     Janus.Evaluation
                     , Janus.Infer
                     , Janus.Judgment
                     , Janus.Parsing
                     , Janus.Pretty
                     , Janus.REPL
                     , Janus.Semiring
                     , Janus.Syntax
                     , Janus.Style
  other-modules:       Paths_janus
  autogen-modules:     Paths_janus
  hs-source-dirs:      src

executable janusc
  import:              common, threaded
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       janus
                     , optparse-applicative

test-suite test
  import:              common, threaded
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       IntegrationSpec
                     , ParseSpec
                     , TypeSpec
  build-depends:       janus
                     , hspec
                     , mtl
                     , megaparsec
  build-tool-depends:  hspec-discover:hspec-discover
  ghc-options:         -Wno-missing-export-lists

